2001-11-24  Per Bothner  <per@bothner.com>

	* emacs.scm:  Use invoke instead of primitive-virtual-method.
	Add parameter type declarations.

2001-10-19  Per Bothner  <per@bothner.com>

	* BufferLocalConstraint.java (get):  Now takes defaultValue argument.

	* Command.java (perform):  Catch Throwable.

2001-10-05  Per Bothner  <per@bothner.com>

	* Buffer.java:  Update for CharSequence -> CharSeq renaming.
	* ProcessMode.java:  Likewise.

2001-06-19  Per Bothner  <per@bothner.com>

	* Makefile.am (PACKAGE_CFNAME):  Rename to PACKAGE_FNAME.

	* BufferKeymap.java:  Handle symbol implemented using Binding.
	* Marker.java (insert):  Remove bogus debug print.

	* emacs.scm (pop-to-buffer, display-window, split-window,
	move-to-column):  Add more parameter type declaration.

2001-06-17  Per Bothner  <per@bothner.com>

	* Buffer.java (makeBufferLocal):  Moved here from Symbol.
	* Command.java:  Handle Symbol moved and removal of Binding2.

2001-06-03  Per Bothner  <per@bothner.com>

	* ReplBuffer.java (<init>): Use new OutPort contructors, and
	specify pretty-printing.

2001-04-09  Per Bothner  <per@bothner.com>

	* Makefile.am (CLEANFILES):  Remove redundant definition.

2001-03-08  Per Bothner  <per@bothner.com>

	* Buffer.java, BufferContent.java, BufferKeymap.java,
	BufferReader.java, Command.java, Marker.java, MarkerReader.java,
	Menu.java,ProcessMode.java, Window.java,emacs.scm}:
	Update gnu.kawa.util->gnu.lists, AbstractString->CharSequence,
	marker-kind to isAfter boolean, array->getArray(), length->size.
	* Marker.java (isPoint):  New method
	Inherit from gnu.lists.SeqPosition.
	* IgnoreAction.java:  New class, extends javax.swing.text.TextAction.
	* Makefile.am:  Update acordingly.
	* BufferContent.java (getChars):  Shift gap to minimize copying.

2000-11-21  Per Bothner  <per@bothner.com>

	* Makefile.am, Makefile.in (EXTRA_DIST):  Include $(EXTRA_JAVA).

2000-10-15  Per Bothner  <per@bothner.com>

	* emacs.scm:  Tweaking of return types, default handling.
